--- a/blescanner/build.gradle
+++ b/blescanner/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'com.afollestad.material-dialogs:core:2.8.0'
-    implementation "org.jetbrains.anko:anko-commons:0.10.8"
+    implementation 'io.github.microutils:kotlin-logging:1.7.9'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
